--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="me2.PNG" alt="Photot of Battula Bhargav" style="width:150px;height:150px;"></td>
+        <td><img src="me2.png" alt="Photot of Battula Bhargav" style="width:150px;height:150px;"></td>
         <td><h1>Battula Bhargav</h1>
         <p><em>Student at <strong><a href="https://rguktn.ac.in/">Rgukt</a></strong></em></p>
         <p>I am graduated from chemical engineering🧡,And now going to It sector</p></td>
