--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <hr>
 <p><h3>Education</h3></p>
 <ul>
-  <li>Be-Tech in Rgukt-Nuzvid</li>
+  <li>B-Tech in Rgukt-Nuzvid</li>
   <li>PUC in Rgukt-Nuzvid</li>
   <li>10th from MPL-High school  guntur</li>
 </ul>
@@ -77,3 +77,4 @@
 <a href="inputs.html"> <em>Click here to Enter Your details</em> </a>
   </body>
 </html>
+
