--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ tr:nth-child(even){background:#e7e7ff10;}
 .project-card h3{margin:5px 0;color:var(--primary);}
 .project-card p{font-size:14px;}
 
-/*-------------- Certificate Popup --------------*/
+/*-------------- Certificates Popup --------------*/
 .certificates{
  display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
  gap:15px;margin-top:20px;
@@ -101,20 +101,32 @@ tr:nth-child(even){background:#e7e7ff10;}
  transition:.3s;box-shadow:0 4px 10px rgba(0,0,0,.2);
 }
 .certificates img:hover{transform:scale(1.06);}
-
-/* Popup Modal */
 #popup{
  display:none;position:fixed;top:0;left:0;width:100%;height:100%;
  background:rgba(0,0,0,.8);justify-content:center;align-items:center;z-index:2000;
 }
-#popup img{
- width:60%;border-radius:10px;
-}
+#popup img{width:60%;border-radius:10px;}
 #popup span{
  position:absolute;top:40px;right:60px;font-size:35px;color:#fff;cursor:pointer;
 }
 
-/*-------------- Button --------------*/
+/*-------------- Skill Badges --------------*/
+.badge{
+  display:inline-block;background:var(--primary);color:white;
+  padding:4px 10px;border-radius:6px;margin:4px;font-size:13px;
+  box-shadow:0 0 10px var(--primary);transition:.3s;
+}
+.badge:hover{transform:scale(1.07);}
+
+/* Scroll Reveal */
+.reveal{
+ opacity:0;transform:translateY(40px);transition:all .9s ease;
+}
+.reveal.active{
+ opacity:1;transform:translateY(0);
+}
+
+/* Button */
 .button{
  display:inline-block;margin-top:20px;padding:12px 25px;background:var(--primary);
  color:white;font-weight:bold;text-decoration:none;border-radius:8px;
@@ -131,6 +143,7 @@ tr:nth-child(even){background:#e7e7ff10;}
  <a href="#home">Home</a>
  <a href="#education">Education</a>
  <a href="#projects">Projects</a>
+ <a href="#skills">Skills</a>
  <a href="#certificates">Certificates</a>
  <a href="#contact">Contact</a>
 </nav>
@@ -147,8 +160,8 @@ tr:nth-child(even){background:#e7e7ff10;}
 <div class="container">
 
 <!-- Education -->
-<h2 id="education">🎓 Education</h2>
-<table>
+<h2 id="education" class="reveal">🎓 Education</h2>
+<table class="reveal">
 <tr><th>Course</th><th>Institute</th><th>CGPA</th><th>Year</th></tr>
 <tr><td>M.Tech CSE</td><td>NIT Goa</td><td>N/A</td><td>2027</td></tr>
 <tr><td>B.Tech Chemical</td><td>RGUKT Nuzvid</td><td>8.99</td><td>2022</td></tr>
@@ -157,43 +170,63 @@ tr:nth-child(even){background:#e7e7ff10;}
 </table>
 
 <!-- Projects -->
-<h2 id="projects">🛠 Projects</h2>
-<div class="projects-grid">
-
+<h2 id="projects" class="reveal">🛠 Projects</h2>
+<div class="projects-grid reveal">
  <div class="project-card">
    <h3><i class="fa-solid fa-database"></i> SAP BW - BMI Automation</h3>
    <p>Data monitoring, automation & BW/4HANA ETL flow.</p>
  </div>
-
  <div class="project-card">
    <h3><i class="fa-solid fa-paw"></i> TinDog Website</h3>
    <p>Fully responsive UI dog dating site.</p>
  </div>
-
  <div class="project-card">
    <h3><i class="fa-solid fa-microphone"></i> AI Voice Assistant</h3>
    <p>Wake word + speech recognition + automation.</p>
  </div>
+</div>
+
+<!-- TECHNICAL SKILLS SECTION ADDED HERE -->
+<h2 id="skills" class="reveal">💡 Technical Skills</h2>
+
+<div class="reveal">
+
+<b>Languages:</b><br>
+<span class="badge">C/C++</span><span class="badge">Python</span><span class="badge">HTML</span>
+<span class="badge">CSS</span><span class="badge">JavaScript</span><span class="badge">SQL</span><br><br>
+
+<b>Developer Tools:</b><br>
+<span class="badge">VS Code</span><span class="badge">GitHub</span><span class="badge">Google Colab</span>
+<span class="badge">NumPy</span><span class="badge">Pandas</span><span class="badge">Scikit-Learn</span>
+<span class="badge">TensorFlow</span><br><br>
+
+<b>Coursework:</b><br>
+<span class="badge">DSA</span><span class="badge">OS</span><span class="badge">COA</span>
+<span class="badge">CN</span><span class="badge">TOC</span><span class="badge">DBMS</span><br><br>
+
+<b>Areas of Interest:</b><br>
+<span class="badge">Software Development</span><span class="badge">AI/ML</span>
+<span class="badge">Full-Stack</span><span class="badge">Android</span>
 
 </div>
 
 <!-- Certificates -->
-<h2 id="certificates">📜 Certificates</h2>
-<div class="certificates">
+<h2 id="certificates" class="reveal">📜 Certificates</h2>
+<div class="certificates reveal">
  <img src="certificates/cert1.jpg" onclick="openPopup(this.src)">
  <img src="certificates/cert2.jpg" onclick="openPopup(this.src)">
  <img src="certificates/cert3.jpg" onclick="openPopup(this.src)">
 </div>
 
-<!-- Popup Modal -->
+<!-- Popup -->
 <div id="popup" onclick="closePopup()">
  <span>&times;</span>
  <img id="popup-img">
 </div>
 
 <!-- Contact -->
-<h2 id="contact">📞 Contact</h2>
-<ul>
+<h2 id="contact" class="reveal">📞 Contact</h2>
+<ul class="reveal">
 <li><i class="fa-solid fa-phone"></i> +91 7286066067</li>
 <li><i class="fa-solid fa-envelope"></i> 25cse2006@nitgoa.ac.in</li>
 <li><i class="fa-brands fa-linkedin"></i> linkedin.com/in/b22in</li>
@@ -213,7 +246,6 @@ function toggleTheme(){
  icon.classList.replace("fa-moon","fa-sun"):
  icon.classList.replace("fa-sun","fa-moon");
 }
-
 function openPopup(src){
  document.getElementById("popup-img").src=src;
  document.getElementById("popup").style.display="flex";
@@ -221,6 +253,18 @@ function openPopup(src){
 function closePopup(){
  document.getElementById("popup").style.display="none";
 }
+
+/* Scroll Reveal */
+const elements=document.querySelectorAll('.reveal');
+const observer=new IntersectionObserver(entries=>{
+ entries.forEach(entry=>{
+   if(entry.isIntersecting){
+     entry.target.classList.add('active');
+     observer.unobserve(entry.target);
+   }
+ });
+},{threshold:.2});
+elements.forEach(el=>observer.observe(el));
 </script>
 
 </body>
