--- a/index.html
+++ b/index.html
@@ -217,6 +217,38 @@ tr:nth-child(even){background:#e7e7ff10;}
  <img src="certificates/cert2.jpg" onclick="openPopup(this.src)">
  <img src="certificates/cert3.jpg" onclick="openPopup(this.src)">
 </div>
+<!-- TECHNICAL SKILLS (already present) -->
+...  (keep as is)
+
+<!-- ================= NEW SECTIONS ADDED BELOW ================= -->
+
+<!-- POSITIONS OF RESPONSIBILITY -->
+<h2 id="responsibility" class="reveal">🏅 Positions of Responsibility</h2>
+<ul class="reveal">
+  <li><strong>NCC Corporal</strong> — 2016-2019</li>
+  <li><strong>Departmental Event Organiser</strong> — Techzite National Fest, Feb 2020</li>
+</ul>
+
+<!-- ACHIEVEMENTS -->
+<h2 id="achievements" class="reveal">🏆 Achievements</h2>
+<ul class="reveal">
+  <li><strong>NCC C Certificate Holder</strong></li>
+  <li><strong>2nd Prize - National Level Technical Quiz</strong> by IICHE ARC & RGUKTN (Feb 2019)</li>
+  <li><strong>GATE CSE Qualified – 2024 & 2025</strong></li>
+  <li><strong>GATE Data Analytics Qualified – 2025</strong></li>
+</ul>
+
+<!-- EXTRA CURRICULAR -->
+<h2 id="extra" class="reveal">✨ Extra-Curricular Activities</h2>
+<ul class="reveal">
+  <li>Worked as <strong>Polling Watcher</strong> in AP General Elections 2019</li>
+  <li>Attended <strong>two NCC CATC Camps</strong></li>
+  <li><strong>1st Prize – PT Competition</strong> at CATC Camp</li>
+  <li><strong>Mandal Topper</strong> in Class 10th</li>
+</ul>
+
+<!-- ============================================================= -->
+<!-- Certificates section continues below this point -->
 
 <!-- Popup -->
 <div id="popup" onclick="closePopup()">
@@ -269,3 +301,4 @@ elements.forEach(el=>observer.observe(el));
 
 </body>
 </html>
+
