--- a/index.html
+++ b/index.html
@@ -238,26 +238,26 @@ tr:nth-child(even){background:#e7e7ff10;}
 <!-- POSITIONS OF RESPONSIBILITY -->
 <h2 id="responsibility" class="reveal">🏅 Positions of Responsibility</h2>
 <ul class="reveal">
-  <li><strong>NCC Corporal</strong> — 2016-2019</li>
-  <li><strong>Departmental Event Organiser</strong> — Techzite National Fest, Feb 2020</li>
+  <li>NCC Corporal — 2016-2019</li>
+  <li>Departmental Event Organiser — Techzite National Fest, Feb 2020</li>
 </ul>
 
 <!-- ACHIEVEMENTS -->
 <h2 id="achievements" class="reveal">🏆 Achievements</h2>
 <ul class="reveal">
-  <li><strong>NCC C Certificate Holder</strong></li>
-  <li><strong>2nd Prize - National Level Technical Quiz</strong> by IICHE ARC & RGUKTN (Feb 2019)</li>
-  <li><strong>GATE CSE Qualified – 2024 & 2025</strong></li>
-  <li><strong>GATE Data Analytics Qualified – 2025</strong></li>
+  <li>NCC C Certificate Holder</li>
+  <li>2nd Prize - National Level Technical Quiz</strong> by IICHE ARC & RGUKTN (Feb 2019)</li>
+  <li>GATE CSE Qualified – 2024 & 2025</li>
+  <li>GATE Data Analytics Qualified – 2025</li>
 </ul>
 
 <!-- EXTRA CURRICULAR -->
 <h2 id="extra" class="reveal">✨ Extra-Curricular Activities</h2>
 <ul class="reveal">
-  <li>Worked as <strong>Polling Watcher</strong> in AP General Elections 2019</li>
-  <li>Attended <strong>two NCC CATC Camps</strong></li>
-  <li><strong>1st Prize – PT Competition</strong> at CATC Camp</li>
-  <li><strong>Mandal Topper</strong> in Class 10th</li>
+  <li>Worked as Polling Watcher in AP General Elections 2019</li>
+  <li>Attended two NCC CATC Camps</li>
+  <li>1st Prize – PT Competitionat CATC Camp</li>
+  <li>Mandal Topper in Class 10th</li>
 </ul>
 
 <!-- ============================================================= -->
@@ -326,5 +326,6 @@ elements.forEach(el=>observer.observe(el));
 
 </body>
 </html>
+
 
 
