--- a/index.html
+++ b/index.html
@@ -9,46 +9,35 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
+/*-------------- Scroll Reveal Base --------------*/
+.reveal{
+ opacity:0;transform:translateY(40px);transition:all .9s ease;
+}
+.reveal.active{
+ opacity:1;transform:translateY(0);
+}
+
 /*-------------- Theme Colors --------------*/
-  /* Scroll reveal animation base */
-.reveal {
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all .9s ease;
-}
-
-/* When visible on screen */
-.reveal.active {
-  opacity: 1;
-  transform: translateY(0);
-}
-
 html{scroll-behavior:smooth;}
 :root{
-  --bg:#f5f7fa;
-  --text:#111;
-  --card:#fff;
-  --primary:#6c63ff;
+  --bg:#f5f7fa;--text:#111;--card:#fff;--primary:#6c63ff;
 }
 .dark-mode{
-  --bg:#0d1117;
-  --text:#e6e6e6;
-  --card:#161b22;
-  --primary:#8b7bff;
+  --bg:#0d1117;--text:#e6e6e6;--card:#161b22;--primary:#8b7bff;
 }
 body{
-  margin:0;font-family:"Poppins",sans-serif;background:var(--bg);color:var(--text);transition:.4s;
+  margin:0;font-family:"Poppins",sans-serif;background:var(--bg);
+  color:var(--text);transition:.4s;
 }
 
 /*-------------- Navbar --------------*/
 nav{
- position:fixed;top:0;left:0;width:100%;
- background:rgba(0,0,0,.25);backdrop-filter:blur(12px);
- padding:12px 0;text-align:center;z-index:999;
+ position:fixed;top:0;left:0;width:100%;padding:12px 0;text-align:center;
+ background:rgba(0,0,0,.25);backdrop-filter:blur(12px);z-index:999;
 }
 nav a{
  color:white;margin:0 18px;font-size:16px;font-weight:600;text-decoration:none;
- transition:.3s;padding:8px 12px;border-radius:6px;
+ padding:8px 12px;border-radius:6px;transition:.3s;
 }
 nav a:hover{background:var(--primary);}
 
@@ -61,9 +50,8 @@ nav a:hover{background:var(--primary);}
 
 /*-------------- Hero --------------*/
 .hero{
- background:linear-gradient(135deg,#6c63ff,#4dc9ff);color:#fff;
+ background:linear-gradient(135deg,#6c63ff,#4dc9ff);color:white;
  text-align:center;padding:110px 20px 65px;
- animation:fadeIn 1.5s ease;
 }
 .hero img{
  width:150px;height:150px;border-radius:50%;border:4px solid #fff;
@@ -78,9 +66,9 @@ h2{
 }
 
 /*-------------- Cards / Lists / Tables --------------*/
-ul,ol,table{
+ul,table{
  background:var(--card);padding:20px;border-radius:12px;margin-top:15px;
- box-shadow:0 4px 20px rgba(0,0,0,.1);transition:.3s;
+ box-shadow:0 4px 20px rgba(0,0,0,.1);
 }
 table{width:100%;border-collapse:collapse;}
 th,td{padding:12px;}
@@ -95,14 +83,13 @@ tr:nth-child(even){background:#e7e7ff10;}
 .project-card{
  background:var(--card);padding:20px;border-radius:12px;
  box-shadow:0 4px 15px rgba(0,0,0,.15);
- transition:.4s;cursor:pointer;transform:translateY(0);
+ transition:.4s;cursor:pointer;
 }
 .project-card:hover{
  transform:translateY(-8px) scale(1.03);
  box-shadow:0px 0px 25px var(--primary);
 }
-.project-card h3{margin:5px 0;color:var(--primary);}
-.project-card p{font-size:14px;}
+.project-card h3{color:var(--primary);}
 
 /*-------------- Certificates Popup --------------*/
 .certificates{
@@ -125,21 +112,12 @@ tr:nth-child(even){background:#e7e7ff10;}
 
 /*-------------- Skill Badges --------------*/
 .badge{
-  display:inline-block;background:var(--primary);color:white;
-  padding:4px 10px;border-radius:6px;margin:4px;font-size:13px;
-  box-shadow:0 0 10px var(--primary);transition:.3s;
+ background:var(--primary);color:white;padding:4px 10px;border-radius:6px;
+ margin:4px;font-size:13px;display:inline-block;box-shadow:0 0 10px var(--primary);
 }
 .badge:hover{transform:scale(1.07);}
 
-/* Scroll Reveal */
-.reveal{
- opacity:0;transform:translateY(40px);transition:all .9s ease;
-}
-.reveal.active{
- opacity:1;transform:translateY(0);
-}
-
-/* Button */
+/*-------------- Buttons --------------*/
 .button{
  display:inline-block;margin-top:20px;padding:12px 25px;background:var(--primary);
  color:white;font-weight:bold;text-decoration:none;border-radius:8px;
@@ -157,6 +135,8 @@ tr:nth-child(even){background:#e7e7ff10;}
  <a href="#education">Education</a>
  <a href="#projects">Projects</a>
  <a href="#skills">Skills</a>
+ <a href="#responsibility">POR</a>
+ <a href="#achievements">Achievements</a>
  <a href="#certificates">Certificates</a>
  <a href="#contact">Contact</a>
 </nav>
@@ -164,7 +144,7 @@ tr:nth-child(even){background:#e7e7ff10;}
 <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-moon"></i></button>
 
 <!-- HERO -->
-<section id="home" class="hero">
+<section id="home" class="hero reveal">
  <img src="me4.png">
  <h1>Battula Bhargav</h1>
  <p>M.Tech CSE @ NIT Goa | Ex-Infosys | Developer</p>
@@ -185,25 +165,14 @@ tr:nth-child(even){background:#e7e7ff10;}
 <!-- Projects -->
 <h2 id="projects" class="reveal">🛠 Projects</h2>
 <div class="projects-grid reveal">
- <div class="project-card">
-   <h3><i class="fa-solid fa-database"></i> SAP BW - BMI Automation</h3>
-   <p>Data monitoring, automation & BW/4HANA ETL flow.</p>
- </div>
- <div class="project-card">
-   <h3><i class="fa-solid fa-paw"></i> TinDog Website</h3>
-   <p>Fully responsive UI dog dating site.</p>
- </div>
- <div class="project-card">
-   <h3><i class="fa-solid fa-microphone"></i> AI Voice Assistant</h3>
-   <p>Wake word + speech recognition + automation.</p>
- </div>
+ <div class="project-card"><h3><i class="fa-solid fa-database"></i> SAP BW - BMI Automation</h3><p>Data monitoring, automation & BW/4HANA ETL flow.</p></div>
+ <div class="project-card"><h3><i class="fa-solid fa-paw"></i> TinDog Website</h3><p>Fully responsive UI dog dating site.</p></div>
+ <div class="project-card"><h3><i class="fa-solid fa-microphone"></i> AI Voice Assistant</h3><p>Wake word + speech recognition + automation.</p></div>
 </div>
 
-<!-- TECHNICAL SKILLS SECTION ADDED HERE -->
+<!-- Skills -->
 <h2 id="skills" class="reveal">💡 Technical Skills</h2>
-
 <div class="reveal">
-
 <b>Languages:</b><br>
 <span class="badge">C/C++</span><span class="badge">Python</span><span class="badge">HTML</span>
 <span class="badge">CSS</span><span class="badge">JavaScript</span><span class="badge">SQL</span><br><br>
@@ -220,8 +189,32 @@ tr:nth-child(even){background:#e7e7ff10;}
 <b>Areas of Interest:</b><br>
 <span class="badge">Software Development</span><span class="badge">AI/ML</span>
 <span class="badge">Full-Stack</span><span class="badge">Android</span>
-
 </div>
+
+<!-- POR -->
+<h2 id="responsibility" class="reveal">🏅 Positions of Responsibility</h2>
+<ul class="reveal">
+ <li>NCC Corporal — 2016-2019</li>
+ <li>Event Organiser — Techzite National Fest, Feb 2020</li>
+</ul>
+
+<!-- Achievements -->
+<h2 id="achievements" class="reveal">🏆 Achievements</h2>
+<ul class="reveal">
+ <li>NCC C Certificate Holder</li>
+ <li>2nd Prize - National Level Technical Quiz (IICHE 2019)</li>
+ <li>GATE CSE Qualified — 2024 & 2025</li>
+ <li>GATE Data Analytics Qualified — 2025</li>
+</ul>
+
+<!-- Extra -->
+<h2 id="extra" class="reveal">✨ Extra-Curricular Activities</h2>
+<ul class="reveal">
+ <li>Polling Watcher — AP Elections 2019</li>
+ <li>Attended Two NCC CATC Camps</li>
+ <li>1st Prize — PT Competition at CATC</li>
+ <li>Mandal Topper in Class 10</li>
+</ul>
 
 <!-- Certificates -->
 <h2 id="certificates" class="reveal">📜 Certificates</h2>
@@ -230,38 +223,6 @@ tr:nth-child(even){background:#e7e7ff10;}
  <img src="certificates/cert2.jpg" onclick="openPopup(this.src)">
  <img src="certificates/cert3.jpg" onclick="openPopup(this.src)">
 </div>
-<!-- TECHNICAL SKILLS (already present) -->
-...  (keep as is)
-
-<!-- ================= NEW SECTIONS ADDED BELOW ================= -->
-
-<!-- POSITIONS OF RESPONSIBILITY -->
-<h2 id="responsibility" class="reveal">🏅 Positions of Responsibility</h2>
-<ul class="reveal">
-  <li>NCC Corporal — 2016-2019</li>
-  <li>Departmental Event Organiser — Techzite National Fest, Feb 2020</li>
-</ul>
-
-<!-- ACHIEVEMENTS -->
-<h2 id="achievements" class="reveal">🏆 Achievements</h2>
-<ul class="reveal">
-  <li>NCC C Certificate Holder</li>
-  <li>2nd Prize - National Level Technical Quiz</strong> by IICHE ARC & RGUKTN (Feb 2019)</li>
-  <li>GATE CSE Qualified – 2024 & 2025</li>
-  <li>GATE Data Analytics Qualified – 2025</li>
-</ul>
-
-<!-- EXTRA CURRICULAR -->
-<h2 id="extra" class="reveal">✨ Extra-Curricular Activities</h2>
-<ul class="reveal">
-  <li>Worked as Polling Watcher in AP General Elections 2019</li>
-  <li>Attended two NCC CATC Camps</li>
-  <li>1st Prize – PT Competitionat CATC Camp</li>
-  <li>Mandal Topper in Class 10th</li>
-</ul>
-
-<!-- ============================================================= -->
-<!-- Certificates section continues below this point -->
 
 <!-- Popup -->
 <div id="popup" onclick="closePopup()">
@@ -287,10 +248,10 @@ tr:nth-child(even){background:#e7e7ff10;}
 function toggleTheme(){
  document.body.classList.toggle("dark-mode");
  const icon=document.querySelector(".theme-toggle i");
- icon.classList.contains("fa-moon")?
- icon.classList.replace("fa-moon","fa-sun"):
- icon.classList.replace("fa-sun","fa-moon");
+ icon.classList.toggle("fa-sun");
 }
+
+/* Certificates popup */
 function openPopup(src){
  document.getElementById("popup-img").src=src;
  document.getElementById("popup").style.display="flex";
@@ -300,32 +261,16 @@ function closePopup(){
 }
 
 /* Scroll Reveal */
-const elements=document.querySelectorAll('.reveal');
 const observer=new IntersectionObserver(entries=>{
  entries.forEach(entry=>{
-   if(entry.isIntersecting){
-     entry.target.classList.add('active');
-     observer.unobserve(entry.target);
-   }
+  if(entry.isIntersecting){
+    entry.target.classList.add("active");
+    observer.unobserve(entry.target);
+  }
  });
 },{threshold:.2});
-elements.forEach(el=>observer.observe(el));
-  const elements = document.querySelectorAll('.reveal');
-
-const observer = new IntersectionObserver(entries=>{
-  entries.forEach(entry=>{
-    if(entry.isIntersecting){
-      entry.target.classList.add('active');
-      observer.unobserve(entry.target); // reveals only once
-    }
-  })
-},{threshold:0.2}); // 20% visible triggers
-
-elements.forEach(el=>observer.observe(el));
+document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 </script>
 
 </body>
 </html>
-
-
-
