--- a/index.html
+++ b/index.html
@@ -17,6 +17,54 @@
  opacity:1;transform:translateY(0);
 }
 
+ /* HAMBURGER NAVBAR STYLE */
+.navbar{
+  position:fixed;top:0;left:0;width:100%;z-index:999;
+  background:rgba(0,0,0,0.25);backdrop-filter:blur(10px);
+  display:flex;justify-content:space-between;align-items:center;
+  padding:10px 25px;
+}
+
+/* Logo text */
+.navbar .logo{
+  color:white;font-size:20px;font-weight:700;letter-spacing:1px;
+}
+
+/* Menu links */
+.navbar ul{
+  list-style:none;display:flex;gap:20px;margin:0;padding:0;
+}
+
+/* Individual link */
+.navbar ul li a{
+  text-decoration:none;color:white;font-weight:600;
+  padding:8px 12px;border-radius:6px;transition:0.3s;
+}
+.navbar ul li a:hover{
+  background:var(--primary);
+}
+
+/* HAMBURGER ICON */
+.hamburger{
+  background:none;border:none;color:white;font-size:22px;
+  cursor:pointer;display:none;
+}
+
+/* MOBILE VIEW */
+@media(max-width:850px){
+  .hamburger{display:block;} /* show hamburger */
+
+  .navbar ul{
+    position:absolute;top:60px;right:0;width:200px;
+    background:rgba(0,0,0,0.8);backdrop-filter:blur(10px);
+    flex-direction:column;text-align:left;padding:20px;
+    display:none;border-radius:10px;
+  }
+  .navbar ul li{margin:10px 0;}
+  .navbar ul.show{display:block;} /* visible when toggled */
+}
+
+
 /*-------------- Theme Colors --------------*/
 html{scroll-behavior:smooth;}
 :root{
@@ -130,16 +178,26 @@ tr:nth-child(even){background:#e7e7ff10;}
 <body>
 
 <!-- NAVBAR -->
-<nav>
- <a href="#home">Home</a>
- <a href="#education">Education</a>
- <a href="#projects">Projects</a>
- <a href="#skills">Skills</a>
- <a href="#responsibility">POR</a>
- <a href="#achievements">Achievements</a>
- <a href="#certificates">Certificates</a>
- <a href="#contact">Contact</a>
+<!-- NAVIGATION (Hamburger) -->
+<nav class="navbar">
+  <div class="logo">Portfolio</div>
+
+  <button class="hamburger" onclick="toggleMenu()">
+      <i class="fa-solid fa-bars"></i>
+  </button>
+
+  <ul id="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#responsibility">POR</a></li>
+      <li><a href="#achievements">Achievements</a></li>
+      <li><a href="#certificates">Certificates</a></li>
+      <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
+
 
 <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-moon"></i></button>
 
@@ -270,7 +328,12 @@ const observer=new IntersectionObserver(entries=>{
  });
 },{threshold:.2});
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
+ function toggleMenu(){
+  document.getElementById("nav-links").classList.toggle("show");
+}
+
 </script>
 
 </body>
 </html>
+
