--- a/index.html
+++ b/index.html
@@ -9,195 +9,113 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-/*-------------- Scroll Reveal Base --------------*/
-.reveal{
- opacity:0;transform:translateY(40px);transition:all .9s ease;
-}
-.reveal.active{
- opacity:1;transform:translateY(0);
-}
+/* Scroll Reveal */
+.reveal{opacity:0;transform:translateY(40px);transition:.9s;}
+.reveal.active{opacity:1;transform:translateY(0);}
 
- /* HAMBURGER NAVBAR STYLE */
-.navbar{
-  position:fixed;top:0;left:0;width:100%;z-index:999;
-  background:rgba(0,0,0,0.25);backdrop-filter:blur(10px);
-  display:flex;justify-content:space-between;align-items:center;
-  padding:10px 25px;
-}
-
-/* Logo text */
-.navbar .logo{
-  color:white;font-size:20px;font-weight:700;letter-spacing:1px;
-}
-
-/* Menu links */
-.navbar ul{
-  list-style:none;display:flex;gap:20px;margin:0;padding:0;
-}
-
-/* Individual link */
-.navbar ul li a{
-  text-decoration:none;color:white;font-weight:600;
-  padding:8px 12px;border-radius:6px;transition:0.3s;
-}
-.navbar ul li a:hover{
-  background:var(--primary);
-}
-
-/* HAMBURGER ICON */
-.hamburger{
-  background:none;border:none;color:white;font-size:22px;
-  cursor:pointer;display:none;
-}
-
-/* MOBILE VIEW */
-@media(max-width:850px){
-  .hamburger{display:block;} /* show hamburger */
-
-  .navbar ul{
-    position:absolute;top:60px;right:0;width:200px;
-    background:rgba(0,0,0,0.8);backdrop-filter:blur(10px);
-    flex-direction:column;text-align:left;padding:20px;
-    display:none;border-radius:10px;
-  }
-  .navbar ul li{margin:10px 0;}
-  .navbar ul.show{display:block;} /* visible when toggled */
-}
-
-
-/*-------------- Theme Colors --------------*/
+/* Theme Colors */
 html{scroll-behavior:smooth;}
-:root{
-  --bg:#f5f7fa;--text:#111;--card:#fff;--primary:#6c63ff;
-}
-.dark-mode{
-  --bg:#0d1117;--text:#e6e6e6;--card:#161b22;--primary:#8b7bff;
-}
-body{
-  margin:0;font-family:"Poppins",sans-serif;background:var(--bg);
-  color:var(--text);transition:.4s;
+:root{--bg:#f5f7fa;--text:#111;--card:#fff;--primary:#6c63ff;}
+.dark-mode{--bg:#0d1117;--text:#e6e6e6;--card:#161b22;--primary:#8b7bff;}
+body{margin:0;font-family:"Poppins",sans-serif;background:var(--bg);color:var(--text);transition:.4s;}
+
+/* ───────────── Dropdown Menu Button ───────────── */
+.menu-btn{
+ position:fixed;top:15px;left:15px;z-index:999;
+ background:var(--primary);color:white;border:none;
+ padding:10px 14px;border-radius:8px;font-size:18px;cursor:pointer;
 }
 
-/*-------------- Navbar --------------*/
-nav{
- position:fixed;top:0;left:0;width:100%;padding:12px 0;text-align:center;
- background:rgba(0,0,0,.25);backdrop-filter:blur(12px);z-index:999;
+/* Dropdown Menu Panel */
+.dropdown{
+ position:fixed;top:60px;left:15px;width:200px;z-index:999;
+ background:rgba(0,0,0,.85);backdrop-filter:blur(8px);
+ border-radius:10px;padding:10px;display:none;
 }
-nav a{
- color:white;margin:0 18px;font-size:16px;font-weight:600;text-decoration:none;
- padding:8px 12px;border-radius:6px;transition:.3s;
+.dropdown a{
+ display:block;color:white;padding:10px;border-radius:6px;
+ text-decoration:none;margin:3px 0;font-weight:600;transition:.3s;
 }
-nav a:hover{background:var(--primary);}
+.dropdown a:hover{background:var(--primary);}
 
-/*-------------- Dark Mode Toggle --------------*/
+/* Theme Toggle */
 .theme-toggle{
  position:fixed;right:20px;top:14px;padding:10px;border:none;
  background:var(--primary);color:#fff;cursor:pointer;
  border-radius:50%;font-size:18px;z-index:1000;
 }
 
-/*-------------- Hero --------------*/
+/* Hero */
 .hero{
- background:linear-gradient(135deg,#6c63ff,#4dc9ff);color:white;
- text-align:center;padding:110px 20px 65px;
+ background:linear-gradient(135deg,#6c63ff,#4dc9ff);color:white;text-align:center;
+ padding:120px 20px 75px;
 }
 .hero img{
  width:150px;height:150px;border-radius:50%;border:4px solid #fff;
  animation:float 4s infinite ease-in-out;
 }
 
-/*-------------- Sections --------------*/
+/* Layout */
 .container{max-width:950px;margin:auto;padding:30px;}
-h2{
- border-left:5px solid var(--primary);padding-left:10px;margin-top:55px;
- font-size:1.7rem;
-}
+h2{border-left:5px solid var(--primary);padding-left:10px;margin-top:55px;font-size:1.7rem;}
 
-/*-------------- Cards / Lists / Tables --------------*/
+/* Cards & Tables */
 ul,table{
  background:var(--card);padding:20px;border-radius:12px;margin-top:15px;
  box-shadow:0 4px 20px rgba(0,0,0,.1);
 }
 table{width:100%;border-collapse:collapse;}
-th,td{padding:12px;}
-th{background:var(--primary);color:white;}
-tr:nth-child(even){background:#e7e7ff10;}
+th,td{padding:12px;} th{background:var(--primary);color:white;}
+tr:nth-child(even){background:#e7e7ff15;}
 
-/*-------------- Project Cards --------------*/
-.projects-grid{
- display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
- gap:20px;margin-top:20px;
-}
+/* Project Cards */
+.projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;margin-top:20px;}
 .project-card{
- background:var(--card);padding:20px;border-radius:12px;
- box-shadow:0 4px 15px rgba(0,0,0,.15);
+ background:var(--card);padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,.15);
  transition:.4s;cursor:pointer;
 }
-.project-card:hover{
- transform:translateY(-8px) scale(1.03);
- box-shadow:0px 0px 25px var(--primary);
-}
+.project-card:hover{transform:translateY(-6px) scale(1.03);box-shadow:0 0 20px var(--primary);}
 .project-card h3{color:var(--primary);}
 
-/*-------------- Certificates Popup --------------*/
-.certificates{
- display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
- gap:15px;margin-top:20px;
-}
+/* Certificates */
+.certificates{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px;margin-top:20px;}
 .certificates img{
- width:100%;border-radius:10px;cursor:pointer;
- transition:.3s;box-shadow:0 4px 10px rgba(0,0,0,.2);
+ width:100%;border-radius:10px;cursor:pointer;transition:.3s;box-shadow:0 4px 10px rgba(0,0,0,.2);
 }
-.certificates img:hover{transform:scale(1.06);}
+.certificates img:hover{transform:scale(1.05);}
 #popup{
  display:none;position:fixed;top:0;left:0;width:100%;height:100%;
- background:rgba(0,0,0,.8);justify-content:center;align-items:center;z-index:2000;
+ background:rgba(0,0,0,.85);justify-content:center;align-items:center;z-index:2000;
 }
-#popup img{width:60%;border-radius:10px;}
-#popup span{
- position:absolute;top:40px;right:60px;font-size:35px;color:#fff;cursor:pointer;
-}
+#popup img{width:60%;border-radius:10px;} #popup span{
+ position:absolute;top:40px;right:60px;font-size:35px;color:#fff;cursor:pointer;}
 
-/*-------------- Skill Badges --------------*/
-.badge{
- background:var(--primary);color:white;padding:4px 10px;border-radius:6px;
- margin:4px;font-size:13px;display:inline-block;box-shadow:0 0 10px var(--primary);
-}
-.badge:hover{transform:scale(1.07);}
+/* Badges */
+.badge{background:var(--primary);color:white;padding:4px 10px;border-radius:6px;margin:4px;display:inline-block;}
 
-/*-------------- Buttons --------------*/
-.button{
- display:inline-block;margin-top:20px;padding:12px 25px;background:var(--primary);
- color:white;font-weight:bold;text-decoration:none;border-radius:8px;
- transition:.3s;box-shadow:0 0 12px var(--primary);
-}
-.button:hover{transform:scale(1.06);}
+/* Button */
+.button{padding:12px 25px;background:var(--primary);color:white;border-radius:8px;text-decoration:none;display:inline-block;margin-top:20px;}
+.button:hover{transform:scale(1.05);}
 </style>
 </head>
 
 <body>
 
-<!-- NAVBAR -->
-<!-- NAVIGATION (Hamburger) -->
-<nav class="navbar">
-  <div class="logo">Portfolio</div>
+<!-- ▼ Dropdown Menu Trigger -->
+<button class="menu-btn" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
 
-  <button class="hamburger" onclick="toggleMenu()">
-      <i class="fa-solid fa-bars"></i>
-  </button>
-
-  <ul id="nav-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#responsibility">POR</a></li>
-      <li><a href="#achievements">Achievements</a></li>
-      <li><a href="#certificates">Certificates</a></li>
-      <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
-
+<!-- ▼ Dropdown Menu -->
+<div id="menuList" class="dropdown">
+ <a href="#home">Home</a>
+ <a href="#education">Education</a>
+ <a href="#projects">Projects</a>
+ <a href="#skills">Skills</a>
+ <a href="#responsibility">POR</a>
+ <a href="#achievements">Achievements</a>
+ <a href="#certificates">Certificates</a>
+ <a href="#extra">Extra-Curricular</a>
+ <a href="#contact">Contact</a>
+</div>
 
 <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-moon"></i></button>
 
@@ -210,7 +128,7 @@ tr:nth-child(even){background:#e7e7ff10;}
 
 <div class="container">
 
-<!-- Education -->
+<!-- EDUCATION -->
 <h2 id="education" class="reveal">🎓 Education</h2>
 <table class="reveal">
 <tr><th>Course</th><th>Institute</th><th>CGPA</th><th>Year</th></tr>
@@ -220,120 +138,102 @@ tr:nth-child(even){background:#e7e7ff10;}
 <tr><td>10th</td><td>MPL High School</td><td>9.7</td><td>2016</td></tr>
 </table>
 
-<!-- Projects -->
+<!-- PROJECTS -->
 <h2 id="projects" class="reveal">🛠 Projects</h2>
 <div class="projects-grid reveal">
- <div class="project-card"><h3><i class="fa-solid fa-database"></i> SAP BW - BMI Automation</h3><p>Data monitoring, automation & BW/4HANA ETL flow.</p></div>
- <div class="project-card"><h3><i class="fa-solid fa-paw"></i> TinDog Website</h3><p>Fully responsive UI dog dating site.</p></div>
- <div class="project-card"><h3><i class="fa-solid fa-microphone"></i> AI Voice Assistant</h3><p>Wake word + speech recognition + automation.</p></div>
+ <div class="project-card"><h3><i class="fa-solid fa-database"></i> SAP BW Automation</h3><p>BW/4HANA flow automation.</p></div>
+ <div class="project-card"><h3><i class="fa-solid fa-paw"></i> TinDog Website</h3><p>Responsive landing site for dogs.</p></div>
+ <div class="project-card"><h3><i class="fa-solid fa-microphone"></i> AI Voice Assistant</h3><p>Voice automation using Python.</p></div>
 </div>
 
-<!-- Skills -->
+<!-- SKILLS -->
 <h2 id="skills" class="reveal">💡 Technical Skills</h2>
 <div class="reveal">
-<b>Languages:</b><br>
-<span class="badge">C/C++</span><span class="badge">Python</span><span class="badge">HTML</span>
+<b>Languages:</b><br><span class="badge">C/C++</span><span class="badge">Python</span><span class="badge">HTML</span>
 <span class="badge">CSS</span><span class="badge">JavaScript</span><span class="badge">SQL</span><br><br>
 
-<b>Developer Tools:</b><br>
-<span class="badge">VS Code</span><span class="badge">GitHub</span><span class="badge">Google Colab</span>
-<span class="badge">NumPy</span><span class="badge">Pandas</span><span class="badge">Scikit-Learn</span>
-<span class="badge">TensorFlow</span><br><br>
+<b>Tools:</b><br><span class="badge">VS Code</span><span class="badge">GitHub</span><span class="badge">Google Colab</span>
+<span class="badge">NumPy</span><span class="badge">Pandas</span><span class="badge">TensorFlow</span><br><br>
 
-<b>Coursework:</b><br>
-<span class="badge">DSA</span><span class="badge">OS</span><span class="badge">COA</span>
-<span class="badge">CN</span><span class="badge">TOC</span><span class="badge">DBMS</span><br><br>
+<b>Coursework:</b><br><span class="badge">DSA</span><span class="badge">OS</span><span class="badge">DBMS</span>
+<span class="badge">CN</span><span class="badge">COA</span><span class="badge">TOC</span><br><br>
 
-<b>Areas of Interest:</b><br>
-<span class="badge">Software Development</span><span class="badge">AI/ML</span>
-<span class="badge">Full-Stack</span><span class="badge">Android</span>
+<b>Interests:</b><br><span class="badge">AI/ML</span><span class="badge">Android</span>
+<span class="badge">Full-Stack</span><span class="badge">Software Dev</span>
 </div>
 
 <!-- POR -->
 <h2 id="responsibility" class="reveal">🏅 Positions of Responsibility</h2>
 <ul class="reveal">
- <li>NCC Corporal — 2016-2019</li>
- <li>Event Organiser — Techzite National Fest, Feb 2020</li>
+<li>NCC Corporal (2016–2019)</li>
+<li>Event Organiser – Techzite Fest 2020</li>
 </ul>
 
-<!-- Achievements -->
+<!-- ACHIEVEMENTS -->
 <h2 id="achievements" class="reveal">🏆 Achievements</h2>
 <ul class="reveal">
- <li>NCC C Certificate Holder</li>
- <li>2nd Prize - National Level Technical Quiz (IICHE 2019)</li>
- <li>GATE CSE Qualified — 2024 & 2025</li>
- <li>GATE Data Analytics Qualified — 2025</li>
+<li>NCC “C” Certificate Holder</li>
+<li>2nd Prize – National Quiz (IICHE 2019)</li>
+<li>Qualified GATE CSE (2024 & 2025)</li>
+<li>Qualified GATE DA (2025)</li>
 </ul>
 
-<!-- Extra -->
-<h2 id="extra" class="reveal">✨ Extra-Curricular Activities</h2>
+<!-- EXTRA -->
+<h2 id="extra" class="reveal">✨ Extra-Curricular</h2>
 <ul class="reveal">
- <li>Polling Watcher — AP Elections 2019</li>
- <li>Attended Two NCC CATC Camps</li>
- <li>1st Prize — PT Competition at CATC</li>
- <li>Mandal Topper in Class 10</li>
+<li>Polling Watcher – Elections 2019</li>
+<li>2 NCC CATC Camps</li>
+<li>1st Prize – PT Event</li>
+<li>Mandal Topper – 10th</li>
 </ul>
 
-<!-- Certificates -->
+<!-- CERTIFICATES -->
 <h2 id="certificates" class="reveal">📜 Certificates</h2>
 <div class="certificates reveal">
- <img src="certificates/cert1.jpg" onclick="openPopup(this.src)">
- <img src="certificates/cert2.jpg" onclick="openPopup(this.src)">
- <img src="certificates/cert3.jpg" onclick="openPopup(this.src)">
+<img src="certificates/cert1.jpg" onclick="openPopup(this.src)">
+<img src="certificates/cert2.jpg" onclick="openPopup(this.src)">
+<img src="certificates/cert3.jpg" onclick="openPopup(this.src)">
 </div>
 
-<!-- Popup -->
+<!-- POPUP -->
 <div id="popup" onclick="closePopup()">
- <span>&times;</span>
- <img id="popup-img">
+<span>&times;</span>
+<img id="popup-img">
 </div>
 
-<!-- Contact -->
+<!-- CONTACT -->
 <h2 id="contact" class="reveal">📞 Contact</h2>
 <ul class="reveal">
-<li><i class="fa-solid fa-phone"></i> +91 7286066067</li>
-<li><i class="fa-solid fa-envelope"></i> 25cse2006@nitgoa.ac.in</li>
-<li><i class="fa-brands fa-linkedin"></i> linkedin.com/in/b22in</li>
-<li><i class="fa-brands fa-github"></i> github.com/ZaynVK</li>
+<li>📱 +91 7286066067</li>
+<li>📧 25cse2006@nitgoa.ac.in</li>
+<li>🔗 linkedin.com/in/b22in</li>
+<li>💻 github.com/ZaynVK</li>
 </ul>
 
 <a href="#home" class="button">⬆ Back to Top</a>
-
 </div>
 
 <!-- JavaScript -->
 <script>
-function toggleTheme(){
- document.body.classList.toggle("dark-mode");
- const icon=document.querySelector(".theme-toggle i");
- icon.classList.toggle("fa-sun");
+function toggleTheme(){document.body.classList.toggle("dark-mode");}
+
+/* Dropdown toggle */
+function toggleMenu(){
+ document.getElementById("menuList").style.display =
+ document.getElementById("menuList").style.display=="block"?"none":"block";
 }
 
 /* Certificates popup */
-function openPopup(src){
- document.getElementById("popup-img").src=src;
- document.getElementById("popup").style.display="flex";
-}
-function closePopup(){
- document.getElementById("popup").style.display="none";
-}
+function openPopup(src){document.getElementById("popup-img").src=src;
+ document.getElementById("popup").style.display="flex";}
+function closePopup(){document.getElementById("popup").style.display="none";}
 
-/* Scroll Reveal */
+/* Scroll reveal activation */
 const observer=new IntersectionObserver(entries=>{
- entries.forEach(entry=>{
-  if(entry.isIntersecting){
-    entry.target.classList.add("active");
-    observer.unobserve(entry.target);
-  }
- });
-},{threshold:.2});
+ entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add("active");observer.unobserve(e.target);}});}
+,{threshold:.2});
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
- function toggleMenu(){
-  document.getElementById("nav-links").classList.toggle("show");
-}
-
 </script>
 
 </body>
 </html>
-
