--- a/index.html
+++ b/index.html
@@ -215,7 +215,20 @@ tr:nth-child(even){background:#e7e7ff15;}
 
 <!-- JavaScript -->
 <script>
-function toggleTheme(){document.body.classList.toggle("dark-mode");}
+function toggleTheme(){
+  document.body.classList.toggle("dark-mode");
+  
+  const icon = document.querySelector(".theme-toggle i");
+  
+  if(document.body.classList.contains("dark-mode")){
+      icon.classList.remove("fa-moon");
+      icon.classList.add("fa-sun");
+  }else{
+      icon.classList.remove("fa-sun");
+      icon.classList.add("fa-moon");
+  }
+}
+
 
 /* Dropdown toggle */
 function toggleMenu(){
@@ -237,3 +250,4 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 
 </body>
 </html>
+
