--- a/index.html
+++ b/index.html
@@ -142,10 +142,16 @@ tr:nth-child(even){background:#e7e7ff15;}
 <h2 id="projects" class="reveal">🛠 Projects</h2>
 <div class="projects-grid reveal">
  <div class="project-card"><h3><i class="fa-solid fa-database"></i> SAP BW Automation</h3><p>BW/4HANA flow automation.</p></div>
- <div class="project-card"><h3><i class="fa-solid fa-paw"></i> TinDog Website</h3><p>Responsive landing site for dogs.</p></div>
+ <a href="https://zaynvk.github.io/tindog/" target="_blank" style="text-decoration:none;color:inherit;">
+<div class="project-card">
+  <h3><i class="fa-solid fa-paw"></i> TinDog Website</h3>
+  <p>Responsive landing site for dogs.</p>
+</div>
+</a>
+<a href="https://github.com/ZaynVK/Voice-Assistant-With-Keyword-spotting" target="_blank" style="text-decoration:none;color:inherit;">
  <div class="project-card"><h3><i class="fa-solid fa-microphone"></i> AI Voice Assistant</h3><p>Voice automation using Python.</p></div>
 </div>
-
+</a>
 <!-- SKILLS -->
 <h2 id="skills" class="reveal">💡 Technical Skills</h2>
 <div class="reveal">
@@ -187,12 +193,7 @@ tr:nth-child(even){background:#e7e7ff15;}
 <li>Mandal Topper – 10th</li>
 </ul>
 
-<!-- CERTIFICATES -->
-<h2 id="certificates" class="reveal">📜 Certificates</h2>
-<div class="certificates reveal">
-<img src="certificates/cert1.jpg" onclick="openPopup(this.src)">
-<img src="certificates/cert2.jpg" onclick="openPopup(this.src)">
-<img src="certificates/cert3.jpg" onclick="openPopup(this.src)">
+
 </div>
 
 <!-- POPUP -->
@@ -250,4 +251,5 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 
 </body>
 </html>
+
 
