--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@ tr:nth-child(even){background:#e7e7ff15;}
 <ul class="reveal">
 <li>📱 +91 7286066067</li>
 <li>📧 25cse2006@nitgoa.ac.in</li>
-<li>🔗 linkedin.com/in/b22in</li>
-<li>💻 github.com/ZaynVK</li>
+<li>🔗 <a href="https://linkedin.com/in/b22in" target="_blank" style="text-decoration:none;color:inherit;"> linkedin</a></li>
+<li>💻 <a href="https://github.com/ZaynVK" target="_blank" style="text-decoration:none;color:inherit;">github</a></li>
 </ul>
 
 <a href="#home" class="button">⬆ Back to Top</a>
@@ -286,3 +286,4 @@ document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 
 </body>
 </html>
+
